[package]
name = "shrimple-parser"
description = "Zero-dependency next-gen parsing combinator library with flexible error reporting"
version = "0.0.3"
edition = "2021"
license = "MIT"
authors = ["Tim Kurdov <tim.kurdov@gmail.com>"]
repository = "https://github.com/schvv31n/shrimple-parser"
# TODO: add no-std
categories = ["parsing"]
keywords = ["parsing-combinator"]

[package.metadata.docs.rs]
features = ["nightly"]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
nightly = []

# the following is the mantra I copy-paste into every project of mine. Warn yourself into oblivion.
# (except for the `std_instead_of_*` part, that's for this lib since it can very well be no-std.
[lints.clippy]
# complexity = { level = "warn", priority = -1 }
unit_arg = "allow"

# restriction = { level = "allow", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
deref_by_slicing = "warn"
infinite_loop = "warn"
mixed_read_write_in_expression = "warn"
exit = "warn"
shadow_unrelated = "warn"
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"

pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"

nursery = { level = "warn", priority = -1 }

[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"
